# somethingbeautiful

./: .gitmodules  ATO_USAGE.md  README.md
3DModels/: HAassembly.step  HAbase.step  lid v4.step
RustFirmware/: RUST_USAGE.md
RustFirmwareWorking/: RUST_USAGE.md
RustFirmwareWorking/izzymonitor-firmware/: Cargo.toml
RustFirmwareWorking/izzymonitor-firmware/.cargo/: config.toml
RustFirmwareWorking/izzymonitor-firmware/src/: display.rs  leds.rs
RustFirmwareWorking/izzymonitor-firmwareWorkingBak/: Cargo.toml  build.rs
RustFirmwareWorking/izzymonitor-firmwareWorkingBak/src/: buttons.rs  main.rs
