[package]
name = "veramonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# ESP32 core dependencies
esp-backtrace = { version = "0.15.0", features = [
    "esp32s3",
    "panic-handler", 
    "exception-handler", 
    "print-uart"
] }
esp-println = { version = "0.13.0", features = ["esp32s3"] }
esp-hal = { version = "0.23.1", features = ["esp32s3"] }

# Async runtime
embassy-executor = { version = "0.2.0", features = ["nightly", "integrated-timers", "executor-thread"] }
embassy-time = { version = "0.1.0" }
embassy-sync = { version = "0.2.0" }

# Display and graphics
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
st7735-lcd = "0.8.1"

# Embedded utilities
embedded-hal = "0.2.7"
fugit = "0.3.6"
critical-section = "1.1.1"
heapless = "0.7.16"

[build-dependencies]
embuild = "0.31.2"

[profile.dev]
opt-level = 2      # Development optimization level
codegen-units = 1

[profile.release]
opt-level = "s"    # Optimize for size
lto = true         # Link Time Optimization
codegen-units = 1  # Better optimization
strip = true       # Remove debug symbols
